@@ -3,6 +3,7 @@ package com.rohan.oo.design.ocp.example1.bad;
 import com.rohan.oo.design.ocp.example1.Color;
 import com.rohan.oo.design.ocp.example1.Size;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Demo {
@@ -11,7 +12,7 @@ public class Demo {
         Product tree = new Product("Tree", Color.GREEN, Size.LARGE);
         Product house = new Product("House", Color.BLUE, Size.LARGE);
 
-        List<Product> products = List.of(apple, tree, house);
+        List<Product> products = Arrays.asList(apple, tree, house);
 
         ProductFilter pf = new ProductFilter();
         System.out.println("Green products: ");
